added widget position
